Fix layout problems with datetimepicker fields.

--- a/Resources/Public/CSS/kitodopublication.css
+++ b/Resources/Public/CSS/kitodopublication.css
@@ -255,7 +255,7 @@
 }
 
 .tx-dpf .form-container button.fill_out_service_urn {
-    right: 66px;
+    right: 5px;
 }
 
 .tx-dpf .form-container button.add_field {
